# University-Intelligence-Database-Agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: universities.yaml
data/output/: universities.csv  universities.json
eval/: eval_report.md  eval_runner.py  ground_truth.json
src/uia/: __init__.py  main.py
src/uia/agent/: __init__.py  crawler.py  orchestrator.py  planner.py  validator.py
src/uia/api/: __init__.py  server.py
src/uia/models/: __init__.py  schema.py
src/uia/utils/: __init__.py  cache.py  http_client.py  llm_client.py
tests/: __init__.py  test_cache.py  test_http_client.py  test_llm_client.py  test_planner.py  test_schema.py  test_server.py  test_validator.py
